src/shared/style/shared.css
:root {
	/* Colours for list/menu/selection items */
	--selected-item-text-color-fwl: var(--color-light-1);
	--selected-item-background-color-fwl: #5252d7;
	--selected-item-border-color-fwl: #5252d7;
	--hovered-item-text-color-fwl: var(--color-text-emphatic, #f7f3e8);
	--hovered-item-background-color-fwl: #2a292b;
	--hovered-item-border-color-fwl: #634968;

	--transition-fn-fwl: ease-out;
	--transition-duration-fwl: 250ms;
}

.themed.theme-light {
	/* Colours for list/menu/selection items */
	--hovered-item-text-color-fwl: var(--color-text-emphatic);
	--hovered-item-background-color-fwl: #f0f0e0;
	--hovered-item-border-color-fwl: #999;
}

/* Using button.active could easily collide with other modules. */
button.btn-active-fwl {
	color: var(--selected-item-text-color-fwl);
	background: var(--selected-item-background-color-fwl);
	border-color: var(--selected-item-border-color-fwl);
	box-shadow: 0 0 5px var(--selected-item-background-color-fwl);
}

.opacity-0 {
	opacity: 0;
}

/* --------------------- */
/* Generic dropdown menu */
/* --------------------- */
.dropdown-menu-fwl {
	--background-color: var(--color-cool-5, #9f8475);
    --border-color: var(--color-cool-3, #584a75);
    --text-color: var(--color-text-secondary, #e7d1b1);
    --group-separator: var(--color-cool-4, #302831);

	padding: 4px;
	margin: 0;
	height: max-content;
    min-width: 150px;
    max-width: 360px;
	list-style: none;
    color: var(--text-color);
    background: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 4px;
	box-shadow: 0 3px 6px rgb(0 0 0 / 45%);
}

.theme-light .dropdown-menu-fwl {
	--background-color: #d9d8c8;
    --border-color: #999;
    --text-color: var(--color-text-secondary);
    --group-separator: #999;
}

.dropdown-menu-fwl > .dropdown-menu-fwl-item {
	display: flex;
	align-items: center;
	padding: 6px;
	border: 1px solid transparent;
	font-size: var(--font-size-12);
	cursor: pointer;
	transition: all var(--transition-fn-fwl) var(--transition-duration-fwl);
}

.dropdown-menu-fwl.dropdown-menu-fwl-hover > .dropdown-menu-fwl-item:hover {
	color: var(--hovered-item-text-color-fwl);
	background: var(--hovered-item-background-color-fwl);
	border-color: var(--hovered-item-border-color-fwl);
}

.dropdown-menu-fwl > li.active {
	color: var(--selected-item-text-color-fwl);
	background: var(--selected-item-background-color-fwl);
	border-color: var(--selected-item-border-color-fwl);
}

.dropdown-menu-fwl > li > i:first-child {
	margin-right: 8px;
}

.dropdown-menu-fwl > li > div {
	flex-grow: 1;
}

.dropdown-menu-fwl .dropdown-menu-fwl {
	flex-grow: 1;
}

.dropdown-menu-fwl .dropdown-menu-fwl-item-hint {
	margin-top: 4px;
	font-size: 0.95em;
	opacity: 0.6;
}

.dropdown-menu-fwl .dropdown-menu-fwl-item-caret {
	margin-left: 8px;
	line-height: 15px;
}

.dropdown-menu-fwl > li.dropdown-menu-fwl-separator {
	margin: 4px 0;
	border-bottom: 1px solid var(--group-separator);
}

.dropdown-menu-fwl > li.dropdown-menu-fwl-header {
	padding: 4px 0 4px 12px;
}

